# departmentwebsite_with_attendancemanagement-sentiment-analysis-in-feedback

./: README.md  change-password.php  depart_db_schema.sql  develop.docx  emotion_dataset_10000.csv  emotion_helpers.php  hod-dashboard.css  hod-dashboard.php  hod-login.php  index.html  invalid.css  invalid.html  logout.php  main.py  migrate_class_columns.php  public-content.php  pyproject.toml  requirement.txt  save-attendance.css  save-attendance.php  scholarship.css  scholarship.html  scholarship.php  scholarship_helpers.php  setup_database.php  staff-dash.css  staff-login.css  staff-login.html  staff-login.php  staff-scholarship-applications.php  staff.php  student-dash.php  student-dashboard.css  student-feedback.php  student-login.css  student-login.html  student-login.php  student-scholarship-status.php  student.css  student.html  (+5 more)
mlmodel/: app.py  classifier.pkl  encoded_scholarship_dataset_changed.csv  main.py  modeltraining.ipynb  predict_emotion.py  predict_video_emotion.py  pyproject.toml  requirement.txt  scholarship.py  text.ipynb  text_emotion_model.pkl  train_emotion_model.py  train_model.py  train_video_emotion_model.py  video_emotion_model.pkl  video_features.py
